--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -146,10 +146,18 @@
 }
 .ol-popup-closer:after {
   content: "✖";
+  font-size: x-large;
+  color: black;
 }
 
 .imgInfo{
   width:100%;
   max-width:20px;
   max-height:20px;
+}
+::ng-deep th {
+  text-align: left !important;
+}
+th[scope="row"] {
+  background-color: #d7d9f2;
 }
