--- a/src/app/layer-panel/layer-panel.component.html
+++ b/src/app/layer-panel/layer-panel.component.html
@@ -116,7 +116,7 @@
                    <div *ngIf="layer.wfs">
                      <button mat-icon-button
                              (click)="onEditLayerClick($event, layer, group.groupName)"
-                             [ngClass]="actionActiveLayer['Identify'] ? 'active': 'normal'">
+                             [ngClass]="layer.onEdit ? 'activeAction': 'normal'">
                        <mat-icon  class= "editIcon">edit</mat-icon>
 
                      </button>
@@ -126,7 +126,7 @@
 
                      <!-- the identify button to the layer panel neede for WMS layers -->
                      <button mat-icon-button (click)="onIdentifyLayerClick($event, layer, group.groupName)"
-                             [ngClass]="actionActiveLayer['Identify'] ? 'active': 'normal'">
+                             [ngClass]="layer.onIdentify ? 'activeAction': 'normal'">
                        <mat-icon class= "editIcon" >info_outline</mat-icon>
                      </button>
                     <!-- <button mat-icon-button (click)="onOpacityLayerClick($event, layer)">
