--- a/src/app/symbol-list/symbol-list.component.html
+++ b/src/app/symbol-list/symbol-list.component.html
@@ -3,7 +3,7 @@
 <mat-card class="symbol-list"  #symListCard>
   <mat-card-title-group>
     <mat-card-title class="panelTitle">Symbols</mat-card-title>
-    <button mat-flat-button (click)="closeListSymbols()" class="matCloseWrapper">
+    <button mat-flat-button (click)="showSymbolList(false)" class="matCloseWrapper">
       <mat-icon >close</mat-icon>
     </button>
 
