--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -1,4 +1,4 @@
-<div class ="example-list"  *ngIf="showForm$ | async"  cdkDragBoundary=".map" cdkDrag >
+<div class ="example-list"  *ngIf="showForm$ | async"  cdkDragBoundary=".map" cdkDrag>
  <mat-card>
       <mat-card-title-group>
         <mat-card-title>Details</mat-card-title>
@@ -23,7 +23,7 @@
                  [id]="question.key" [type]="question.type">
         <div *ngSwitchCase="'slider'">
          <span>{{question.min}} </span>
-          <input  [id]="question.key" type="range"  [min]="question.min" value="question.min" [max]="question.max" step="1"
+          <input  [id]="question.key" type="range"  [min]="question.min" [value]="question.min" [max]="question.max" step="1"
                   [formControlName]="question.key" >
          <span>{{question.max}} </span>
           <span></span>
