snackbar top center and highlight current element just added

--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -2,9 +2,9 @@
  <mat-card>
       <mat-card-title-group>
         <mat-card-title>Details</mat-card-title>
-        <button mat-flat-button (click)="closeForm()" class="matCloseWrapper">
+        <!--<button mat-flat-button (click)="closeForm()" class="matCloseWrapper">
           <mat-icon >close</mat-icon>
-        </button>
+        </button> -->
 
       </mat-card-title-group>
       <mat-divider class = "toolbarDivider"></mat-divider>
