--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -13,8 +13,8 @@
 <app-layer-panel  [groupLayers] = "groupsLayers"
                  (layerVisClick)="updateMapVisibleLayer($event)"
 (editLayerClick)="updateEditingLayer($event)"  (groupLayerVisClick)="updateMapVisibleGroupLayer($event)"
-(layersOrder) = "updateOrderGroupsLayers($event)"
-(identifyLayerClick)="startIdentifying($event)"></app-layer-panel>
+(layersOrder) = "updateOrderGroupsLayers($event)" (rankingLayerClick)="startRankingMeasures($event)"
+(identifyLayerClick)="startIdentifying($event)">   </app-layer-panel>
 </div>
 <app-dynamic-form #dynamicForm  [questions]="questionsSubject.asObservable()"
                    [showForm]="showFormSubject.asObservable()"
