progress in ranking measures

--- a/src/app/editing-toolbar/editing-toolbar.component.html
+++ b/src/app/editing-toolbar/editing-toolbar.component.html
@@ -42,10 +42,10 @@
         <mat-icon>star_rate</mat-icon>
       </button>
 
-      <button mat-icon-button (click)="startEditAction('RatingMeasure');showSymbolPanel(false);" matTooltip="Rank measure"
+      <!-- another approach <button mat-icon-button (click)="startEditAction('RatingMeasure');showSymbolPanel(false);" matTooltip="Rank measure"
               [ngClass]="actionActive['RatingMeasure'] ? 'active': 'normal'" >
         <mat-icon  svgIcon="ratingActionPlan"></mat-icon>
-      </button>
+      </button>  -->
       <!--
       <button mat-icon-button (click)="startEditAction('Copy');showSymbolPanel(false)" matTooltip="Copiar element(s)"
               [ngClass]="actionActive['Copy'] ? 'active': 'normal'" >
