--- a/src/app/map/dialog-rating-measure-dialog.html
+++ b/src/app/map/dialog-rating-measure-dialog.html
@@ -1,22 +1,31 @@
-<h2 mat-dialog-title>Rating {{data.layerNameDialog}}</h2>
+<h2 mat-dialog-title>Bewertung {{data.layerNameDialog}}</h2>
 <mat-dialog-content>
-  Enter your rating for the measures:
+  Geben Sie Ihre Bewertung für die Maßnahmen ein:
+  <!--Enter your rating for the measures:-->
  <!-- enter here a container, prepare the data for an array and double loop-->
   <div class="star-rating-container star-rating-animation" fxLayout="row" fxLayoutAlign="start center" >
+    <div [formGroup]="formGroup">
     <div *ngFor="let field of data.fieldNames" >
+
+      <label >{{field | titlecase }}: </label>
       <mat-slider  color = 'primary' [formControlName]="field" [max]= 5
                    [min]=1 [thumbLabel]=true  [value]="field.min"
                    (change) = "showQuestionValue(field, $event.value)">{{field.value}}</mat-slider>
+      <label id={{field}}> 0 </label>
     </div>
-
+      <mat-form-field>
+        <mat-label>
+          Sonstiges:
+        </mat-label>
+        <input matInput class="inputText" [formControlName]="'sonstiges'" [id]="'sonstiges'">
+      </mat-form-field>
+    </div>
   </div>
-
-
-
 
 
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button color="primary" [mat-dialog-close]="data.rating" cdkFocusInitial>Ok</button>
+  <button mat-button color="primary" [mat-dialog-close]="formGroup.getRawValue()" cdkFocusInitial>Ok</button>
   <button mat-button color="primary"  (click)="onNoClick()">Cancel</button>
 </mat-dialog-actions>
+
